--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="header">
-    <img src="logo.png" alt="CleanUp Experience Logo" class="logo">
+    <img src="Screenshot_20250721_013145_WhatsApp.jpg" alt="CleanUp Experience Logo" class="logo">
     <nav class="nav">
       <a href="#services">Services</a>
       <a href="#about">About Us</a>
