--- a/index.html
+++ b/index.html
@@ -1,65 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CleanUp Experience</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-  
-<body>
-  <header class="header">
-    <img src="Screenshot_20250721_013145_WhatsApp.jpg" alt="CleanUp Experience Logo" class="logo">
-    <nav class="nav">
-      <a href="#services">Services</a>
-      <a href="#about">About Us</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <h1>Complete House & Office Cleaning Services</h1>
-    <p>Experience the sparkle with CleanUp Experience – your trusted cleaning solution!</p>
-    <a href="#contact" class="btn-primary">Get a Quote</a>
-  </section>
-
-  <section id="services" class="services">
-    <h2>Our Services</h2>
-    <div class="service-list">
-      <div class="service">
-        <h3>House Cleaning</h3>
-        <p>Comprehensive home cleaning from top to bottom. Regular or deep cleaning options available.</p>
-      </div>
-      <div class="service">
-        <h3>Office Cleaning</h3>
-        <p>Maintain a clean and healthy workspace with our reliable office cleaning services.</p>
-      </div>
-      <div class="service">
-        <h3>Move-In / Move-Out</h3>
-        <p>Stress-free moving with our detailed cleaning services for new or vacated spaces.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="about" class="about">
-    <h2>About Us</h2>
-    <p>CleanUp Experience is committed to delivering high-quality cleaning solutions. Our team is trained, reliable, and ready to make your space shine. Let us do the dirty work while you relax!</p>
-  </section>
-
-  <section id="contact" class="contact">
-    <h2>Contact Us</h2>
-    <form action="#" method="post">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" placeholder="How can we help you?" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-
-  <footer class="footer">
-    <p>&copy; 2025 CleanUp Experience. All rights reserved.</p>
-  </footer>
-</body>
-
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <title>CleanUp Experience</title> <!-- Força redirecionamento para HTTPS --> <script> if (location.protocol !== 'https:') { location.href = 'https:' + window.location.href.substring(window.location.protocol.length); } </script> <style> * { margin: 0; padding: 0; box-sizing: border-box; } body { font-family: Arial, sans-serif; background-color: #ffffff; color: #333; line-height: 1.6; overflow-x: hidden; } header { background-color: #0a2e40; color: #fff; padding: 20px; text-align: center; } .logo { max-width: 120px; display: block; margin: 0 auto 10px; } .nav a { color: #fff; text-decoration: none; margin: 0 15px; font-weight: bold; } .nav a:hover { text-decoration: underline; } .hero { background-color: #f9fcfd; text-align: center; padding: 80px 20px; position: relative; z-index: 1; } .hero::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 40, 60, 0.05); z-index: -1; } .hero h1 { font-size: 2.5rem; margin-bottom: 10px; color: #0d2c3f; } .hero p { font-size: 1.2rem; color: #0d2c3f; } .btn-primary { display: inline-block; margin-top: 20px; padding: 10px 25px; background-color: #0a2e40; color: white; border-radius: 4px; text-decoration: none; transition: background-color 0.3s ease; } .btn-primary:hover { background-color: #084061; } section { padding: 60px 20px; text-align: center; } .service-list { display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; } .service { max-width: 300px; background: #eef5f8; padding: 20px; border-radius: 8px; } form { max-width: 500px; margin: 0 auto; display: flex; flex-direction: column; gap: 15px; } input, textarea { padding: 10px; font-size: 1rem; border: 1px solid #ccc; border-radius: 5px; } button { padding: 10px; font-size: 1rem; background-color: #0a2e40; color: white; border: none; border-radius: 5px; cursor: pointer; } button:hover { background-color: #084061; } footer { background-color: #0a2e40; color: #fff; padding: 20px; text-align: center; } @media (max-width: 768px) { .service-list { flex-direction: column; align-items: center; } .nav { display: flex; flex-direction: column; gap: 10px; } } </style> </head> <body> <header class="header"> <!-- Altere o caminho da imagem se necessário --> <img src="https://via.placeholder.com/120x60?text=Logo" alt="CleanUp Experience Logo" class="logo" /> <nav class="nav"> <a href="#services">Services</a> <a href="#about">About Us</a> <a href="#contact">Contact</a> </nav> </header> <section class="hero"> <h1>Complete House & Office Cleaning Services</h1> <p>Experience the sparkle with CleanUp Experience – your trusted cleaning solution!</p> <a href="#contact" class="btn-primary">Get a Quote</a> </section> <section id="services" class="services"> <h2>Our Services</h2> <div class="service-list"> <div class="service"> <h3>House Cleaning</h3> <p>Comprehensive home cleaning from top to bottom. Regular or deep cleaning options available.</p> </div> <div class="service"> <h3>Office Cleaning</h3> <p>Maintain a clean and healthy workspace with our reliable office cleaning services.</p> </div> <div class="service"> <h3>Move-In / Move-Out</h3> <p>Stress-free moving with our detailed cleaning services for new or vacated spaces.</p> </div> </div> </section> <section id="about" class="about"> <h2>About Us</h2> <p>CleanUp Experience is committed to delivering high-quality cleaning solutions. Our team is trained, reliable, and ready to make your space shine. Let us do the dirty work while you relax!</p> </section> <section id="contact" class="contact"> <h2>Contact Us</h2> <form action="#" method="post"> <input type="text" name="name" placeholder="Your Name" required /> <input type="email" name="email" placeholder="Your Email" required /> <textarea name="message" placeholder="How can we help you?" required></textarea> <button type="submit">Send Message</button> </form> </section> <footer class="footer"> <p>&copy; 2025 CleanUp Experience. All rights reserved.</p> </footer> </body> </html>
