--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <header class="header">
       <img
-        src="Screenshot_20250721_013145_WhatsApp.jpg"
+        src="logo.jpg"
         alt="CleanUp Experience Logo"
         class="logo"
       />
