update add email

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CleanUp Experience</title>
     <link rel="icon" src="logo.jpg" />
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Força redirecionamento para HTTPS -->
     <script>
       if (location.protocol !== "https:") {
@@ -89,6 +90,10 @@
         class="btn-primary"
         >Send a Message</a
       >
+      <a href="mailto:info@cleanupexperience.ca?subject=Cleaning%20Service%20Inquiry&body=Hi,%20I'm%20interested%20in%20your%20cleaning%20services.%20Please%20send%20me%20more%20details." class="email-button">
+        <i class="fas fa-envelope"></i> Contact Us
+      </a>
+
     </section>
     <footer class="footer">
       <p>&copy; 2025 CleanUp Experience. All rights reserved.</p>
